Changed no sticky on mobile, fixed class names, adjusted padding for mobile and set media @768

--- a/src/components/common/Navbar/style.scss
+++ b/src/components/common/Navbar/style.scss
@@ -2,7 +2,7 @@
 @import "../../../scss/base";
 
 //Main header to be used for sticky if needed
-.container {
+.nav-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,7 +15,7 @@
 
     .navbar-items {
         display: flex;
-        width: 80%;
+        width: 91%;
         height: 90px;
         justify-content: center;
         align-items: center;
@@ -71,10 +71,12 @@ a:visited {
 }
 
 
-.logo {
+.nav-logo {
     padding-top: 22px;
-    width: 180px;
+    max-width: 100%;
+    height: auto;
     margin-bottom: 18px;
+    min-width: 150px;
 }
 
 //Buttons
@@ -105,33 +107,39 @@ a:visited {
     border: none;
     }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 768px) {
     .btn {
         visibility: hidden;
     }
+    
 }
 
 
 
 //Media
-@media screen and (max-width: 1200px) {
-    
-.navbar-items {
-    margin-right: auto;
-    padding-left: 15px;
-}
+@media screen and (max-width: 768px) {
+.nav-container {
+    position: relative;
 
+    .navbar-items {
+        margin-right: auto;
+        padding-left: 15px;
+    }
+}
+    
 .nav-menu {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
-    height: 480px;
+    height: 420px;
     position: absolute;
     top: 0;
     left: -100%;
     opacity: 1;
+    padding: 5px 4px;
     transition: all 0.5s ease;
+    
 
     &.active {
         background: $white;
@@ -140,11 +148,13 @@ a:visited {
         opacity: 1;
         transition: all 0.8s ease;
         z-index: 1;
+        
     }
+    
 }
 .nav-links {
     text-align: center;
-    padding: 2rem 0;
+    padding: 1.8rem 0;
     width: 100%;
     display: table;
 
@@ -154,12 +164,14 @@ a:visited {
         color: $white;
         opacity: .8;
     }
+    
 }
 
 //Logo to be changed
-    .logo {
-        margin: px;
-        padding:0;
+    .nav-logo {
+        margin-bottom: 60px;
+        padding-left: 10px;
+        min-width: 100px;
     }
 
     a {
